--- a/front/user.html
+++ b/front/user.html
@@ -25,6 +25,18 @@
                  <div class="col-md-12">
                    <input placeholder="E-mail" class="input-field" name="email" required type="email"> 
                  </div>
+
+
+
+                 <div class="col-md-12">
+
+                   <select>
+                      <option>Lote 1 - R$ 10 + 1 pacote de fraldas - {{ingressos1}}</option>
+                      <option>Lote 2 - R$ 20 + 1kg de alimento - {{ingressos2}}</option>
+                      <option>Lote 3 - R$ 30 + 1 item de higiene - {{ingressos3}}</option>
+                      <option>Lote 4 - R$ 40 + 1 roupa - {{ingressos4}}</option>
+                   </select>
+                 </div>
                </div>
              </div>
              <div class="col-md-6">
