--- a/front/user.html
+++ b/front/user.html
@@ -15,7 +15,7 @@
         <a ng-click='modalAppears()'><button>Participar!</button></a>
         <div class="isHidden">
                  <div class="col-md-12 col-sm-12 col-xs-12 ">
-            <form  onsubmit="return submitForm(ev._id);" method="post" name="contactform" class="contact-form wow zoomIn" data-wow-delay="0.6s" id="contact-form">
+            <form  method="post" name="contactform" class="contact-form wow zoomIn" data-wow-delay="0.6s" id="contact-form">
               <div class="col-md-6">
                 <div class="row">
                   <div class="col-md-12">
@@ -40,14 +40,7 @@
                </div>
              </div>
              <div class="col-md-6">
-               <h3>Escolha como contribuir!</h3>
-                <div ng-repeat="donations in ev.ticketLots">
-                  <div>{{donations.name}}</div>
-                  <div>{{donations.price}}</div>
-                  <div>{{donations.bought}}</div>
-                  <div>{{donations.totalAmount}}</div>
-               </div> 
-               <input value="Send Message" class="input-send submit margin-button" required type="submit" name="submit">
+               <input value="Send Message" class="input-send submit margin-button" required type="button" name="submit" ng-click="submitForm">
              </div>
             <div class="col-md-12 col-sm-12 send no-show hidden-xs "><button class=" send-contact-form-button btn btn-sucess margin-button"><h4>Message sent sucessfully! We will get in touch shortly.</h4></button></div>
             <div class="col-xs-12 send no-show-smartphone visible-xs"><button class=" send-contact-form-button btn btn-sucess margin-button"><h4>Message sent sucessfully!</h4></button></div>
