--- a/front/user.html
+++ b/front/user.html
@@ -12,8 +12,8 @@
       </div>
 
       <div class="clearfix col-md-6 pull letf">
-        <a ng-click='modalAppears()'><button>Participar!</button></a>
-        <div class="isHidden">
+        <a ng-click='modalAppears($index)'><button>Participar!</button></a>
+        <div class="isHidden{{$index}}">
                  <div class="col-md-12 col-sm-12 col-xs-12 ">
             <form  method="post" name="contactform" class="contact-form wow zoomIn" data-wow-delay="0.6s" id="contact-form">
               <div class="col-md-6">
