--- a/front/user.html
+++ b/front/user.html
@@ -13,7 +13,7 @@
 
       <div class="clearfix col-md-6 pull letf">
         <a ng-click='modalAppears($index)'><button>Participar!</button></a>
-        <div class="isHidden{{$index}}">
+        <div class="isHidden num{{$index}}">
                  <div class="col-md-12 col-sm-12 col-xs-12 ">
             <form  method="post" name="contactform" class="contact-form wow zoomIn" data-wow-delay="0.6s" id="contact-form">
               <div class="col-md-6">
