--- a/front/user.html
+++ b/front/user.html
@@ -40,7 +40,7 @@
                </div>
              </div>
              <div class="col-md-6">
-               <input value="Send Message" class="input-send submit margin-button" required type="button" name="submit" ng-click="submitForm()">
+               <input value="Reservar" class="input-send submit margin-button" required type="button" name="submit" ng-click="submitForm()">
              </div>
             <div class="col-md-12 col-sm-12 send no-show hidden-xs "><button class=" send-contact-form-button btn btn-sucess margin-button"><h4>Message sent sucessfully! We will get in touch shortly.</h4></button></div>
             <div class="col-xs-12 send no-show-smartphone visible-xs"><button class=" send-contact-form-button btn btn-sucess margin-button"><h4>Message sent sucessfully!</h4></button></div>
