--- a/front/AdminForm/index.html
+++ b/front/AdminForm/index.html
@@ -25,7 +25,7 @@
         var app = angular.module('MyApp', []);
 
         app.controller("PostsCtrl", function($scope, $http) {
-          $http.get('http://cadashora.esy.es/data.json').success(function(data, status, header, config) {
+          $http.get('https://oldiscool.herokuapp.com/api/events').success(function(data, status, header, config) {
               $scope.posts = data.buyers;              
 
           })
