--- a/admin/add-evento.html
+++ b/admin/add-evento.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Admin OldIsCool</a>
+            <a class="navbar-brand" href="#">Admin OLDisCOOL</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Compradores</a></li>
               <li><a href="#">Eventos</a></li>
-              <li><a href="#">Add Evento</a></li>
+              <li><a href="#">Adicionar Evento</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -51,7 +51,7 @@
 
 
       
-      <h1>Adiciona evento</h1>
+      <h1>Adicionar evento</h1>
 
       <div class="panel panel-default">
         <div class="panel-body">
