--- a/admin/index.html
+++ b/admin/index.html
@@ -52,9 +52,9 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Compradores</a></li>
-              <li><a href="#">Eventos</a></li>
-              <li><a href="#">Add Evento</a></li>
+              <li><a href="/compradores">Compradores</a></li>
+              <li><a href="/eventos">Eventos</a></li>
+              <li><a href="/eventos/novo">Add Evento</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
