--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,7 @@
     <script data-require="angular-route@*" data-semver="1.2.14" src="https://code.angularjs.org/1.2.14/angular-route.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
- 
+
 
   </head>
 <body>
@@ -23,9 +23,9 @@
           <li><a href="#Contact-anchor" >Contact</a></li>
         </ul>
       </div>
-  </div>       
+  </div>
 </nav>
-     
+
 
 <nav class="nav navbar-default style-1 visible-xs">
     <div class=" container-fluid header">
@@ -40,9 +40,9 @@
                 <li><a href="#About-anchor" class="drop-link ancora">About<div class="open-drop"></div></a></li>
                 <li><a href="#Contact-anchor" class="drop-link ancora">Contact<div class="open-drop"></div></a></li>
               </ul>
-            </div> 
+            </div>
          </nav>
-    </div> 
+    </div>
 </nav>
 
 <!--=====================video and name of the company =====================-->
@@ -53,7 +53,7 @@
             <img src="img/Foto_top.png" id="an-image" class="a-img img-backgroung-video">
           </div>
         <div class="black-layer"></div>
-        </div> 
+        </div>
         <div class=" col-md-12 col-sm-12 col-lg-12 pull-left" >
           <div class="col-md-12 top-title">
             <img src="img/logo.png" class="logo2 pull-left">
@@ -63,6 +63,10 @@
   </div>
 </div>
 
+<!--=====================carousel placeholder =====================-->
+  <div>
+
+  </div>
 
   <div ng-view></div>
 
