--- a/front/index.html
+++ b/front/index.html
@@ -71,6 +71,8 @@
   <div ng-view></div>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="angular-modal-service.js"></script>
+   
   <script src="all.js"></script>
     <script src="app.js"></script>
     <script src="github.js"></script>
