--- a/front/modal-buy-ticket.html
+++ b/front/modal-buy-ticket.html
@@ -6,10 +6,25 @@
         <h2 class="modal-title">{{title}}</h2>
         <h4>{{subtitle}}</h4>
       </div>
-      <div class="modal-body" style="display:flex;flex-direction:row;justify-content:space-around;align-items:center;">
-            <div style="background-color: red;">oi1</div>
-            <div style="background-color: green;">oi2</div>
-            <div style="background-color: yellow;">oi3</div>
+        <div class="modal-body" style="display:flex;flex-direction:row;justify-content:space-around;align-items:center;background-color:royalblue;">
+            <div style="background-color:#EBEBEB;width:20%;background-color:#EBEBEB ;border-radius:10px;padding:1rem 2rem;">
+                <h1>Doe R$32,00<h1>
+                <p>1 ingresso para evento* <br>Contribuir, no dia do evento, levando um alimento não perecível</p>
+                <h5>Limitado ( 8 restantes de 10 )</h5>
+                <h5>2 pessoas cooltribuiram    </h5>
+            </div>
+            <div style="background-color:#EBEBEB;width:20%;">
+                <h1>Doe R$38,00<h1>
+                <p>1 ingresso para evento* <br>Contribuir, no dia do evento, levando um alimento não perecível</p>
+                <h5>Limitado ( 8 restantes de 10 )</h5>
+                <h5>2 pessoas cooltribuiram    </h5>
+            </div>
+            <div style="background-color:#EBEBEB;width:20%;">
+                <h1>Doe R$38,00<h1>
+                <p>1 ingresso para evento* <br>Contribuir, no dia do evento, levando um alimento não perecível</p>
+                <h5>Limitado ( 8 restantes de 10 )</h5>
+                <h5>2 pessoas cooltribuiram    </h5>
+            </div>
         </div>
       <div class="modal-footer">
         <button type="button" ng-click="close()" class="btn btn-primary" data-dismiss="modal">OK</button>
@@ -18,3 +33,4 @@
     </div>
   </div>
 </div>
+
